--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -2,15 +2,15 @@
 -  Game css
 ---------------*/
 
-.game{
+.game {
     display: none;
     height: 100%;
 
-    &.is-active{
+    &.is-active {
         display: flex;
     }
 
-    &__left{
+    &__left {
         position: fixed;
         width: 35%;
         background: $bg-color;
@@ -22,28 +22,28 @@
         background-image: url('https://media.giphy.com/media/35HTeYyUj5FPMUgVec/giphy.gif');
     }
 
-    &__right{
+    &__right {
         margin-left: 35%;
         width: 65%;
         height: 100%;
         padding: 2em 3%;
 
-        background: rgb(2,0,36);
-        background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(58,19,56,1) 35%, rgba(58,19,56,1) 100%);
+        background: rgb(2, 0, 36);
+        background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(58, 19, 56, 1) 35%, rgba(58, 19, 56, 1) 100%);
     }
 
-    &__logo{
+    &__logo {
         font-size: 2.5em;
         font-weight: 500;
         font-family: 'K2D', sans-serif;
 
-        a{ 
-            color: $test-color; 
+        a {
+            color: $test-color;
         }
 
-        &:before{
+        &:before {
             content: '';
-            display:inline-block;
+            display: inline-block;
             border-radius: 50%;
             width: 25px;
             height: 25px;
@@ -51,14 +51,14 @@
         }
     }
 
-    &__inner{
+    &__inner {
         @include inner;
 
         padding-top: 1em;
         text-align: center;
     }
 
-    &__title{
+    &__title {
         font-weight: 600;
         font-size: 2.2em;
         color: $third-color;
@@ -67,7 +67,7 @@
 
     }
 
-    &__controls{
+    &__controls {
         width: 100%;
         height: auto;
         text-align: left;
@@ -76,12 +76,12 @@
         overflow: hidden;
         margin: 0 0 1em 0;
 
-        &:hover > img{
+        &:hover>img {
             transform: scale(1.5)
         }
     }
 
-    &__image{
+    &__image {
         display: block;
         width: 100%;
         max-width: 600px;
@@ -90,7 +90,7 @@
         transition: transform 0.5s ease-in-out;
     }
 
-    &__tag{
+    &__tag {
         border-right: 1px solid $forth-color;
         border-bottom: 1px solid $forth-color;
         display: inline-block;
@@ -98,11 +98,11 @@
         color: $primary-color;
     }
 
-    &-buttons{
+    &-buttons {
         overflow: hidden;
     }
 
-    &-buttons__grid{
+    &-buttons__grid {
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
@@ -112,3 +112,76 @@
 
 }
 
+.game-options {
+    $self: &;
+    margin: 1em;
+    padding: 1em;
+    border: 1px solid $forth-color;
+
+
+    &__title {
+        font-size: $font-size-xl;
+        font-weight: 500;
+        color: $forth-color;
+
+    }
+
+    &__item {
+        display: block;
+        position: relative;
+        padding-left: 35px;
+        margin-bottom: 12px;
+        cursor: pointer;
+        font-size: 22px;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+
+        input {
+            position: absolute;
+            opacity: 0;
+            cursor: pointer;
+
+            &:checked ~ #{$self}__checkmark {
+                background-color: $primary-color;
+            }
+        }
+
+        &:hover input ~ #{$self}__checkmark {
+            background-color: $secondary-color;
+        }
+
+        input:checked ~ #{$self}__checkmark {
+            background-color: $forth-color;
+        }
+
+        input:checked ~ #{$self}__checkmark:after {
+            display: block        
+        }
+    }
+
+    &__checkmark {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 25px;
+        width: 25px;
+        background-color: $secondary-color;
+        border-radius: 50%;
+
+        &:after {
+            content: "";
+            position: absolute;
+            display: none;
+            top: 9px;
+            left: 9px;
+            width: 8px;
+            height: 8px;
+            border-radius: 50%;
+            background: $primary-color;
+        }
+    }
+
+
+}
