Added game options

--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -117,31 +117,29 @@
     margin: 1em;
     padding: 1em;
     border: 1px solid $forth-color;
-
+    display: inline-block;
 
     &__title {
-        font-size: $font-size-xl;
+        font-size: $font-size-l;
         font-weight: 500;
         color: $forth-color;
-
+        margin-bottom: 0.5em;
     }
 
     &__item {
         display: block;
         position: relative;
-        padding-left: 35px;
-        margin-bottom: 12px;
+        padding-left: 25px;
+        margin-bottom: 10px;
         cursor: pointer;
-        font-size: 22px;
-        -webkit-user-select: none;
-        -moz-user-select: none;
-        -ms-user-select: none;
         user-select: none;
 
         input {
             position: absolute;
+            left: 0; right:0;
             opacity: 0;
             cursor: pointer;
+            z-index: 11;
 
             &:checked ~ #{$self}__checkmark {
                 background-color: $primary-color;
@@ -149,7 +147,7 @@
         }
 
         &:hover input ~ #{$self}__checkmark {
-            background-color: $secondary-color;
+            background-color: $forth-color;
         }
 
         input:checked ~ #{$self}__checkmark {
@@ -163,25 +161,29 @@
 
     &__checkmark {
         position: absolute;
-        top: 0;
+        top: 2px;
         left: 0;
-        height: 25px;
-        width: 25px;
-        background-color: $secondary-color;
+        height: 15px;
+        width: 15px;
+        background-color: $primary-color;
         border-radius: 50%;
 
         &:after {
             content: "";
             position: absolute;
             display: none;
-            top: 9px;
-            left: 9px;
-            width: 8px;
-            height: 8px;
+            top: 5px;
+            left: 5px;
+            width: 5px;
+            height: 5px;
             border-radius: 50%;
             background: $primary-color;
         }
     }
 
-
+    label {
+        color: $primary-color;
+        font-size: $font-size;
+        cursor: pointer;
+    }
 }
