--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -9,7 +9,7 @@ html, body {
     height: 100%;
     font-size: 100%;
     font-family: sans-serif;
-    background: $fith-color;
+    background:  $bg-color;
 }
 
 *{
