--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -3,21 +3,56 @@
 ---------------*/
 
 .button{
+    $self: &;
+    position: relative;
     display: flex;
-    flex-direction: row;
-    align-items: center;
-    text-align: center;
-    margin: 0 0.5em;
-    padding: 1.5em;
-
-    border: 1px solid $forth-color;
-    border-radius: .3em;
     flex-grow: 1;
 
+    margin: 0 0.5em;
+    color: $forth-color;
+    border: 1px solid $forth-color;
+    border-radius: .3em;
     transition: 0.5s all;
     cursor: pointer;
 
-    color: $forth-color;
+    &__inner{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        text-align: center;
+        padding: 1.5em;
+        flex-grow: 1;
+    }
+
+    &__radio{
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        left: 0; right:0;
+        opacity: 0;
+        cursor: pointer;
+        z-index: 11;
+    }
+
+    &__inner:hover,  &__radio:checked ~ &__inner, &__radio:hover ~ &__inner{
+        background-color: $forth-color;
+        color:  rgba(58,19,56,1);
+        span:nth-of-type(2){
+            color: black;
+        }
+    }
+
+    &__item{
+        flex-grow: 1;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+    }
+
+    &__tag{
+        margin-top: auto;
+        padding-top: 10px;
+    }
 
     &--grow{
         flex-grow: 1;
@@ -29,13 +64,5 @@
         max-width: 50%;
         max-height: 100px;
         margin: auto;
-    }
-
-    &:hover{
-        background-color: $forth-color;
-        color:  rgba(58,19,56,1);
-        span:nth-of-type(2){
-            color: black;
-        }
     }
 }
