--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -20,8 +20,6 @@
         background-repeat: no-repeat;
         background-position: center bottom;
         background-image: url('https://media.giphy.com/media/35HTeYyUj5FPMUgVec/giphy.gif');
-        transform: skewY(-1.5deg);
-
     }
 
     &__right {
@@ -31,7 +29,6 @@
         width: 65%;
         height: 100%;
         padding: 2em 3%;
-        transform: skewY(1.5deg);
 
 
         background: rgb(2, 0, 36);
@@ -112,84 +109,8 @@
         display: flex;
         flex-wrap: wrap;
         justify-content: space-between;
-        margin: 0 -0.5em;
+        margin: .5em -0.5em;
         padding: 1em;
     }
 
-}
-
-.game-options {
-    $self: &;
-    margin: 1em;
-    padding: 1em;
-    border: 1px solid $forth-color;
-    display: inline-block;
-
-    &__title {
-        font-size: $font-size-l;
-        font-weight: 500;
-        color: $forth-color;
-        margin-bottom: 0.5em;
-    }
-
-    &__item {
-        display: block;
-        position: relative;
-        padding-left: 25px;
-        margin-bottom: 10px;
-        cursor: pointer;
-        user-select: none;
-
-        input {
-            position: absolute;
-            left: 0; right:0;
-            opacity: 0;
-            cursor: pointer;
-            z-index: 11;
-
-            &:checked ~ #{$self}__checkmark {
-                background-color: $primary-color;
-            }
-        }
-
-        &:hover input ~ #{$self}__checkmark {
-            background-color: $forth-color;
-        }
-
-        input:checked ~ #{$self}__checkmark {
-            background-color: $forth-color;
-        }
-
-        input:checked ~ #{$self}__checkmark:after {
-            display: block        
-        }
-    }
-
-    &__checkmark {
-        position: absolute;
-        top: 2px;
-        left: 0;
-        height: 15px;
-        width: 15px;
-        background-color: $primary-color;
-        border-radius: 50%;
-
-        &:after {
-            content: "";
-            position: absolute;
-            display: none;
-            top: 5px;
-            left: 5px;
-            width: 5px;
-            height: 5px;
-            border-radius: 50%;
-            background: $primary-color;
-        }
-    }
-
-    label {
-        color: $primary-color;
-        font-size: $font-size;
-        cursor: pointer;
-    }
 }
