--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,7 +8,10 @@ $third-color: #ffb677;
 $forth-color: #ff8364;
 $fith-color: #21232f;
 
+//
+
 $bg-color: #fdfcfe;
+
 
 // font colors
 $test-color: #20222a;
