--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -8,7 +8,9 @@
     display: flex;
     flex-grow: 1;
 
+    padding: 0;
     margin: 0 0.5em;
+    background: none;
     color: $forth-color;
     border: 1px solid $forth-color;
     border-radius: .3em;
