--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -1,7 +1,7 @@
 /*-------------
 -  Master css
 ---------------*/
-
+@import './base/reset';
 @import './base/variables';
 @import './mixins/mixins';
 @import './base/base';
