--- a/src/scss/components/_button.scss
+++ b/src/scss/components/_button.scss
@@ -47,7 +47,14 @@
         span:nth-of-type(2){
             color: black;
         }
+        outline: 0px solid #ffff;
     }
+
+    &__radio:focus ~ &__inner{
+        outline: 2px solid #ffff;
+    }
+
+    
 
     &__item{
         flex-grow: 1;
