--- a/src/scss/master.scss
+++ b/src/scss/master.scss
@@ -5,6 +5,7 @@
 @import './base/variables';
 @import './mixins/mixins';
 @import './base/base';
+@import './base/animtions';
 @import './components/game';
 @import './components/button';
 @import './components/text';
