updated pong webpack file

--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -8,7 +8,8 @@ $third-color: #ffb677;
 $forth-color: #ff8364;
 $fith-color: #21232f;
 
-//
+// imgs 
+$bg-img: url('../../assets/man-two.png');
 
 $bg-color: #fdfcfe;
 
@@ -21,3 +22,4 @@ $font-size: 0.8em;
 $font-size-s: 0.6em;
 $font-size-l: 1.2em;
 $font-size-xl: 1.5em;
+
