--- a/src/scss/components/_game.scss
+++ b/src/scss/components/_game.scss
@@ -19,7 +19,7 @@
         background-size: 99% 95%;
         background-repeat: no-repeat;
         background-position: center bottom;
-        background-image: url('https://media.giphy.com/media/35HTeYyUj5FPMUgVec/giphy.gif');
+        background-image: url($bg-img);
     }
 
     &__right {
