--- a/src/scss/base/_variables.scss
+++ b/src/scss/base/_variables.scss
@@ -9,7 +9,7 @@ $forth-color: #ff8364;
 $fith-color: #21232f;
 
 // imgs 
-$bg-img: url('../../assets/man-two.png');
+$bg-img:'../assets/pong-man.gif';
 
 $bg-color: #fdfcfe;
 
